...
 *  parameter, and whose `onPeopleChanged` lambda argument is our `onPeopleChanged` lambda variable.
 *  - `frontLayerContent` we pass a block whose Composable depends on the value of `tabSelected`:
 *      - [CraneScreen.Fly] we call the Composable [ExploreSection] with its `title` argument "Explore
 *      Flights by Destination", its `exploreList` argument our `suggestedDestinations` variable and
 *      its `onItemClicked` argument our [onExploreItemClicked] parameter.
 *      - [CraneScreen.Sleep] we call the Composable [ExploreSection] with its `title` argument
 *      "Explore Properties by Destination", its `exploreList` argument the [MainViewModel.hotels]
 *      field of our [viewModel] parameter and its `onItemClicked` argument our [onExploreItemClicked]
 *      parameter.
 *      - [CraneScreen.Eat] we call the Composable [ExploreSection] with its `title` argument
 *      "Explore Restaurants by Destination", its `exploreList` argument the [MainViewModel.restaurants]
 *      field of our [viewModel] parameter and its `onItemClicked` argument our [onExploreItemClicked]
 *      parameter.
 *
 * @param onExploreItemClicked the [OnExploreItemClicked] lambda that we should pass to [ExploreSection]
 * @param openDrawer a lambda that [HomeTabBar] can call to open the drawer of the [Scaffold] used
 * by the [CraneHome] Composable.
...
            )
        },
        frontLayerContent = {
            when (tabSelected) {
                CraneScreen.Fly -> {
                    ExploreSection(
                        title = "Explore Flights by Destination",
                        exploreList = suggestedDestinations,
                        onItemClicked = onExploreItemClicked
                    )
                }

                CraneScreen.Sleep -> {
...
